# servant-db-postgresql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  servant-db-postgresql.cabal  stack.yaml
example01/: Main.hs
src/Servant/DB/: PostgreSQL.hs
src/Servant/DB/PostgreSQL/: Composite.hs  Context.hs  Default.hs  HasDB.hs  Variadic.hs
test/: DB.hs  Fixture.hs
test/Fixture/: User.hs
test/Servant/: PostgreSQLSpec.hs
