name:                 servant-db-postgresql
version:              0.1.0.0
synopsis:             Derive a postgres client to database API specified by servant-db
-- description:
license:              BSD3
license-file:         LICENSE
homepage:             
author:               Anton Gushcha
maintainer:           ncrashed@gmail.com
category:             Database
copyright:            2016 (c) Anton Gushcha
build-type:           Simple
extra-source-files:
  README.md
  CHANGELOG.md
cabal-version:        >=1.10

library
  exposed-modules:
    Servant.DB.PostgreSQL
    Servant.DB.PostgreSQL.HasDB
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
