name:                 servant-db-postgresql
version:              0.1.0.0
synopsis:             Derive a postgres client to database API specified by servant-db
-- description:
license:              BSD3
license-file:         LICENSE
homepage:             
author:               Anton Gushcha
maintainer:           ncrashed@gmail.com
category:             Database
copyright:            2016 (c) Anton Gushcha
build-type:           Simple
extra-source-files:
  README.md
  CHANGELOG.md
cabal-version:        >=1.10

library
  exposed-modules:
    Servant.DB.PostgreSQL
    Servant.DB.PostgreSQL.Context
    Servant.DB.PostgreSQL.HasDB
  -- other-modules:
  -- other-extensions:
  build-depends:
      base                          >= 4.7   && < 5
    , servant                       >= 0.9   && < 0.10
    , servant-db                    >= 0.1   && < 0.2
    , postgresql-simple             >= 0.5   && < 0.6
    , postgresql-query              >= 3.0   && < 3.1
    , text                          >= 1.2   && < 1.3
  hs-source-dirs:       src
  default-language:     Haskell2010
