name:                 servant-db-postgresql
version:              0.1.0.0
synopsis:             Derive a postgres client to database API specified by servant-db
-- description:
license:              BSD3
license-file:         LICENSE
homepage:             
author:               Anton Gushcha
maintainer:           ncrashed@gmail.com
category:             Database
copyright:            2016 (c) Anton Gushcha
build-type:           Simple
extra-source-files:
  README.md
  CHANGELOG.md
cabal-version:        >=1.10

library
  exposed-modules:
    Servant.DB.PostgreSQL
    Servant.DB.PostgreSQL.Context
    Servant.DB.PostgreSQL.HasDB
  -- other-modules:
  -- other-extensions:
  build-depends:
      base                          >= 4.7   && < 5
    , postgresql-query              >= 3.0   && < 3.1
    , postgresql-simple             >= 0.5   && < 0.6
    , servant                       >= 0.9   && < 0.10
    , servant-db                    >= 0.1   && < 0.2
    , text                          >= 1.2   && < 1.3
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:
    DeriveGeneric
    OverloadedStrings
    ScopedTypeVariables

test-suite servant-db-postgresql-test
  main-is:              Spec.hs
  type:                 exitcode-stdio-1.0
  other-modules:
    DB
    Fixture
    Servant.PostgreSQLSpec
  build-depends:
      base                          >= 4.7   && < 5
    , bytestring                    >= 0.10  && < 0.11
    , hspec                         >= 2.2   && < 2.4
    , HUnit                         >= 1.3   && < 1.4
    , monad-logger                  >= 0.3   && < 0.4
    , optparse-applicative          >= 0.12  && < 0.13
    , postgresql-query              >= 3.0   && < 3.1
    , servant-db
    , servant-db-postgresql
    , transformers-base             >= 0.4   && < 0.5
  hs-source-dirs:       test
  default-language:     Haskell2010
  default-extensions:
    DeriveGeneric
    OverloadedStrings
    QuasiQuotes
    ScopedTypeVariables
    TemplateHaskell
